--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!--
+FInal Project to replace my final
+    
+   TLTuck5 inc.
+    Author: Tobius Tucker
+    Date:   4/27/2025
+
+    Filename: TLTuck5.github.io
+-->
     <head>
-        <title>Demo Page</title>
+        <title>TLTuck5</title>
 
         <link href="text.css" rel="stylesheet"/>
-
-    </head>
-    <body>
-        <h1>This is my demo page!</h1>
-
+</head>
+<body>
+<img src="better logo.png"></img>
+<h1>Introduction</h1>
+<p>My name is Toby, aka TLTuck5. Im a professional moron who is bad at playing video games and even worse at being a Youtuber.
+Below are links to my various social medias that you can find me rambling on.</p>
+ <ul> 
+    <li href="https://www.youtube.com/@TLTuck5">Youtube</li>
+    <li href="https://x.com/TlTuck5">X(formerly twitter)</li>
+    <li href="https://bsky.app/profile/tltuck5.bsky.social">Bluesky</li>
+    <li href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Most Important social media account</li>     
+ </ul>
+    </body>
