--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ FInal Project to replace my final
 <p>My name is Toby, aka TLTuck5. Im a professional moron who is bad at playing video games and even worse at being a Youtuber.
 Below are links to my various social medias that you can find me rambling on.</p>
  <ul> 
-    <li href="https://www.youtube.com/@TLTuck5">Youtube</li>
-    <li href="https://x.com/TlTuck5">X(formerly twitter)</li>
-    <li href="https://bsky.app/profile/tltuck5.bsky.social">Bluesky</li>
-    <li href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Most Important social media account</li>     
+    <li><a href="https://www.youtube.com/@TLTuck5">Youtube</a></li>
+    <li><a href="https://x.com/TlTuck5">X(formerly twitter)</a></li>
+    <li><a href="https://bsky.app/profile/tltuck5.bsky.social">Bluesky</a></li>
+    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Most Important social media account</a></li>     
  </ul>
     </body>
