--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ FInal Project to replace my final
 </head>
 <body>
 <img src="better logo.png"></img>
-<h1>Introduction</h1>
+<h1>Meet TLTuck5</h1>
 <p>My name is Toby, aka TLTuck5. Im a professional moron who is bad at playing video games and even worse at being a Youtuber.
 Below are links to my various social medias that you can find me rambling on.</p>
  <ul> 
