--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ FInal Project to replace my final
 <body>
 <img src="better logo.png"></img>
 <h1>Meet TLTuck5</h1>
-<p>My name is Toby, aka TLTuck5. I'm just a guy who likes having fun and playing vvideo games.
+<p>My name is Toby, aka TLTuck5. I'm just a guy who likes having fun and playing video games.
 I consider myself a professional moron who is bad at playing video games and even worse at being a Youtuber.
 Below are links to my various social medias that you can find me rambling on.</p>
  <ul> 
